fix(YouTube Music - Third-party lyrics): minor bug fix.